--- a/findly-builder/src/app/components/add-faq/add-faq.component.html
+++ b/findly-builder/src/app/components/add-faq/add-faq.component.html
@@ -431,7 +431,7 @@
     </div>
   </div>
   <hr>
-  <div class="add-alternative-questions row" *ngIf="!isFollowUp && faqData"> 
+  <div class="add-alternative-questions row" *ngIf="!isFollowUp && faqData && !addAltFaq"> 
     <div class="col-8 pl-0 pr-2">
         <div class="label-text text-truncate">{{"addFaq.alternate_questions" | translate}}
             <span *ngIf="faqData">{{faqData._source.faq_alt_questions?.length>0?'('+faqData._source.faq_alt_questions?.length+')':''}}</span>
@@ -446,10 +446,24 @@
         <button class="kr-sg-button-primary btn_lg" (click)="addAltQues()">{{"addFaq.add" | translate}}</button>
     </div>
   </div>
+  <div class="add-alternative-questions row" *ngIf="!isFollowUp && addAltFaq"> 
+    <div class="col-8 pl-0 pr-2">
+        <div class="label-text text-truncate">{{"addFaq.alternate_questions" | translate}}
+            <span *ngIf="faqData">{{faqData?._source?.faq_alt_questions?.length>0?'('+faqData?._source?.faq_alt_questions?.length+')':''}}</span>
+            <!-- ({{(selectedFaq.alternateQuestions?selectedFaq.alternateQuestions.length:0)}}) -->
+        </div>
+        <div class="added-tags text-truncate">Add alternate forms of the question.</div>
+    </div>
+    <div class=" col-4 text-right pr-0 alter-add-btn" *ngIf="faqData?._source?.faq_alt_questions?.length>0 || isAdd">
+        <button class="kr-sg-button-ghost px-0" (click)="addAltQues();" (mouseout)="addSrc = 'assets/icons/add_plus.svg'" (mouseover)="addSrc = 'assets/icons/editor/plus-add.svg'"><img src="{{addSrc}}" class="mr-2" [ngClass]="{'alternate-add-plus-icon':(addSrc === 'assets/icons/editor/plus-add.svg')}">{{"addFaq.alternate_questions" | translate}}</button>
+    </div>
+    <div class="col-12 p-0 " *ngIf="!faqData?._source?.faq_alt_questions?.length && !isAdd">
+        <button class="kr-sg-button-primary btn_lg" (click)="addAltQues()">{{"addFaq.add" | translate}}</button>
+    </div>
+  </div>
   <div *ngIf="isAdd" class="alternative-question-results">
       <app-add-alternate-question (cancelAltQuestion)="isAdd=false;" (saveAltQuestion)="addAnotherAlternate($event)" [faqServ]="faqServiceAlt" [isFromFaqsForm]="true"></app-add-alternate-question>
   </div>
-  
   <ng-container *ngIf="faqData && faqData._source && faqData._source.faq_alt_questions?.length">
   <div class="added-questions-list py-0" *ngFor="let alternateQuestion of faqData._source?.faq_alt_questions; let alterIndex = index" >
      <div class="pointer content-body-question row" *ngIf="editAltQuestionIndex !== alterIndex" (click)="editAltQuestion(alternateQuestion,alterIndex);">
