close icon removing in show all results in bussiness app for top down

--- a/findly-builder/src/assets/web-kore-sdk/demo/css/top-search.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/css/top-search.css
@@ -2776,3 +2776,6 @@ padding-left: 3px;
 .sdk-top-down-interface .searchAssist-kore-chat-window .full-results-data-container .tile-with-centered-content-parent.grid_view_template.gride-view-carousel-with-centered-content-parent .tile-with-centered-content {
   width: 100%;
 }
+.sdk-top-down-interface .top-down-search-background-div .all-result-container .back-search{
+display: none !important;
+}
