--- a/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
@@ -10695,9 +10695,12 @@ body.demo .finalResults .task-wrp:nth-child(n+3) {
 }
 .searchAssist-kore-chat-window .filters-content {
     width: 100%;
-    border-bottom: 1px solid var(--sdk-border-iron-color);
+    border-bottom: 0px solid var(--sdk-border-iron-color);
     margin: 0;
     padding: 25px 0;
+}
+.searchAssist-kore-chat-window .filters-body .filters-content:last-child {
+    border-bottom: none
 }
 .searchAssist-kore-chat-window .filters-body .filters-content:first-child {
     padding-top: 0px;
