--- a/findly-builder/src/app/components/summary/summary.component.html
+++ b/findly-builder/src/app/components/summary/summary.component.html
@@ -1,15 +1,12 @@
-
-
-
-<app-useronboarding-journey #onboard [componentType]='componentType' *ngIf="showOverview"></app-useronboarding-journey>
-<div class="over-view-config-tour" *ngIf="!showOverview">
+<app-useronboarding-journey #onboard [componentType]='componentType'></app-useronboarding-journey>
+<!-- <div class="over-view-config-tour" *ngIf="!showOverview">
   <div class="tour-header">
     <div class="title">{{'overview.overview' | translate}} </div>
     <div class="close-tour"><img src="assets/icons/close-white.svg" (click)="openOnBoardingModal()"></div>
   </div>
   <div class="tour-info">{{'overview.tour_info' | translate}}</div>
   <button class="kr-sg-button-primary btn_lg" (click)="openOnBoardingModal()">{{'overview.gotIt' | translate}}</button>
-</div>
+</div> -->
 
 
 <perfect-scrollbar class="scroll-data-overview">
@@ -23,7 +20,7 @@
               <div class="count-sec">
                  <div class="count">{{totalUsersStats?.totalUsers}}</div> <!--*ngIf="totalUsersStats?.percentageIncrease!=0" -->
                 <div class="cont-up-down">
-                  <span class="bg-type" [ngClass]="{'fail':totalUsersStats?.percentageIncrease<0}"><img [src]="totalUsersStats?.percentageIncrease<0?'assets/icons/arrow-decrease.svg':'assets/icons/overview/arrow-increase.svg'"></span>{{ totalUsersStats?.percentageIncrease }}%
+                  <span class="bg-type" [ngClass]="{'fail':totalUsersStats?.percentageIncrease<0}"><img [src]="totalUsersStats?.percentageIncrease<0?'assets/icons/arrow-decrease.svg':'assets/icons/overview/arrow-increase.svg'"></span>{{ math.abs(totalUsersStats?.percentageIncrease) }}%
                 </div>
               </div>
               <div class="graph-sec">
@@ -50,7 +47,7 @@
               <div class="count-sec">
                 <div class="count">{{totalSearchesStats?.totalSearches}}</div>
                  <div class="cont-up-down"> <!--*ngIf="totalSearchesStats?.searchRate!=0" -->
-                  <span class="bg-type" [ngClass]="{'fail':totalSearchesStats?.searchRate<0}"><img [src]="totalSearchesStats?.searchRate<0?'assets/icons/arrow-decrease.svg':'assets/icons/overview/arrow-increase.svg'"></span>{{ totalSearchesStats.searchRate }}%
+                  <span class="bg-type" [ngClass]="{'fail':totalSearchesStats?.searchRate<0}"><img  [src]="totalSearchesStats?.searchRate<0?'assets/icons/arrow-decrease.svg':'assets/icons/overview/arrow-increase.svg'"></span>{{ math.abs(totalSearchesStats.searchRate) }}%
                 </div>
               </div>
               <div class="graph-sec">
@@ -82,7 +79,7 @@
                 <div class="d-flex align-items-center">
                   <!-- *ngIf="![0,null].includes(totalSearchesStats.resultRate)" -->
                   <div class="cont-up-down">
-                    <span class="bg-type" [ngClass]="{'fail':totalSearchesStats?.resultRate<0}"><img [src]="totalSearchesStats?.increasedResultRate<0?'assets/icons/arrow-decrease.svg':'assets/icons/overview/arrow-increase.svg'"></span>{{totalSearchesStats?.increasedResultRate}}%
+                    <span class="bg-type" [ngClass]="{'fail':totalSearchesStats?.increasedResultRate<0}"><img [src]="totalSearchesStats?.increasedResultRate<0?'assets/icons/arrow-decrease.svg':'assets/icons/overview/arrow-increase.svg'"></span>{{math.abs(totalSearchesStats?.increasedResultRate)}}%
                   </div>
                   <div class="graph-sec pl-4 pt-0">
                     <img [src]="totalSearchesStats?.increasedResultRate>=0?'assets/icons/overview/graph-1.svg':'assets/icons/overview/graph-3.svg'">
@@ -112,7 +109,7 @@
                   <span class="d-inline-block text-truncate" title="{{totalSearchesStats?.clicks }}">{{totalSearchesStats?.clicks }}</span>
                   <span class="ctr-data">| {{'overview.CTR' | translate}}: <b>{{totalSearchesStats?.ctr}}%</b></span></div>
                 <div class="cont-up-down" *ngIf="totalSearchesStats?.clicks!=0">
-                  <span class="bg-type"><img [src]="totalSearchesStats?.clickRate<0?'assets/icons/arrow-decrease.svg':'assets/icons/overview/arrow-increase.svg'"></span>{{totalSearchesStats?.clickRate}}%
+                  <span class="bg-type" [ngClass]="{'fail':totalSearchesStats?.clickRate<0}"><img [src]="totalSearchesStats?.clickRate<0?'assets/icons/arrow-decrease.svg':'assets/icons/overview/arrow-increase.svg'"></span>{{math.abs(totalSearchesStats?.clickRate)}}%
                 </div>
               </div>              
             </div>
