--- a/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
@@ -13692,8 +13692,9 @@ border: 0;
     bottom: 40px;
     padding: 8px 30px;
     background: var(--sdk-bg-athens-gray-color);
+    box-shadow: 0px 2px 5px rgba(32, 33, 36, 0.2);
     /* box-shadow: 0px -1px 0px rgba(32, 33, 36, 0.15); */
-    box-shadow: 0px -50px 0px rgba(255, 255, 255, 0.9);
+    /* box-shadow: 0px -50px 0px rgba(255, 255, 255, 0.9); */
     /* 0px -5px 6px 5px rgb(251 251 251) */
     z-index: 2;
 }
