--- a/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
@@ -7367,7 +7367,7 @@ body{
     max-height: 250px;
     bottom: 0;
     position: relative;
-    width: auto;
+    width: auto !important;
     padding: 20px;
     height: auto;
     box-shadow: 0px 2px 5px rgba(32, 33, 36, 0.2);
