--- a/findly-builder/src/app/components/search-experience/search-experience.component.html
+++ b/findly-builder/src/app/components/search-experience/search-experience.component.html
@@ -368,15 +368,11 @@
             <div class="col-12 pr-0" *ngSwitchCase="'interactions'">
                 <div class="interactins-content col-12 p-0 row m-0">
                     <div class="left-sec col-12 p-0">
-                        <div class="greeting-message border-with-padding border-0 col-7 pb-0 pt-0">
-                            <div class="kr-sg-input-text-area">
+                        <div class="greeting-message border-with-padding border-0 pb-0 pt-0">
+                            <div class="kr-sg-input-text-area w-auto">
                                 <div class="label-text">{{'searchexperience.customize_launch' | translate}}</div>
                                 <textarea class="input-text" maxlength="60" #box (keyup)="0" [(ngModel)]="searchObject.searchInteractionsConfig.welcomeMsg" [ngStyle]="{'color':searchObject.searchInteractionsConfig.welcomeMsgColor}"></textarea>
-                            </div>
-                            <div class="emojis-block">
-                                <!-- <div class="emoji-img"><label for="myFileInput"><img [src]="emojiIcon" width="18" height="18">
-                                    <input type="file" style="display: none;" id="myFileInput" (change)="selectIcon($event,'emoji','auto')" /></label>
-                                </div>                                 -->
+                                <div class="count-length">{{box.value.length}} / {{'searchexperience.60' | translate}} characters</div>
                                 <div class="emoji-img">
                                     <div class="kr-sg-dropdowns" ngbDropdown [placement]="'right-top'" id="avatarDropdown">
                                         <div class="dropdown dropdown-open">
@@ -402,40 +398,80 @@
                                         </div>
                                     </div>	
                                 </div>
+                            </div>
+                            <div class="emojis-block">
+                                <!-- <div class="emoji-img"><label for="myFileInput"><img [src]="emojiIcon" width="18" height="18">
+                                    <input type="file" style="display: none;" id="myFileInput" (change)="selectIcon($event,'emoji','auto')" /></label>
+                                </div>                                 -->
 
-                                <div class="fill-colors-block">
-                                    <div class="fill-color">
-                                        <div class="box-color" [ngClass]="{'color-pallet-container interaction-color': msgColor}" (mouseover)="toggle6=true;msgColor=true;">
-                                            <input
-                                                [style.background]="color6"
-                                                [(colorPicker)]="color6"
-                                                [cpOutputFormat]="'hex'"
-                                                [cpAlphaChannel]="'always'"
-                                                (colorPickerChange)="selectedColor=$event" 
-                                                [cpCloseClickOutside]="false"
-                                                [(cpToggle)]='toggle6'
-                                                readonly
-                                            />
-
-                                            <div class="box-color-content" *ngIf="msgColor">
-                                                <div class="header-title-close">
-                                                    <div class="title-name">{{'searchexperience.choose_color' | translate}}</div>
-                                                    <div class="close-color" (click)="closeColorPallete('msgColor')">
-                                                        <img src="assets/icons/close.svg">
+                                <div class="d-flex">
+                                    <div class="fill-colors-block mr-4 ml-4">
+                                        <div class="fill-color">
+                                            <div class="label-color">Text Color</div>
+                                            <div class="box-color" [ngClass]="{'color-pallet-container interaction-color': msgColor}" (mouseover)="toggle6=true;msgColor=true;">
+                                                <input
+                                                    [style.background]="color6"
+                                                    [(colorPicker)]="color6"
+                                                    [cpOutputFormat]="'hex'"
+                                                    [cpAlphaChannel]="'always'"
+                                                    (colorPickerChange)="selectedColor=$event" 
+                                                    [cpCloseClickOutside]="false"
+                                                    [(cpToggle)]='toggle6'
+                                                    readonly
+                                                />
+    
+                                                <div class="box-color-content" *ngIf="msgColor">
+                                                    <div class="header-title-close">
+                                                        <div class="title-name">{{'searchexperience.choose_color' | translate}}</div>
+                                                        <div class="close-color" (click)="closeColorPallete('msgColor')">
+                                                            <img src="assets/icons/close.svg">
+                                                        </div>
                                                     </div>
+                                                    <div class="selected-previous-colors flex-wrap">
+                                                        <ng-container *ngFor="let col of searchObject.searchWidgetConfig.userSelectedColors">
+                                                            <div class="bg-color-selected" [ngStyle]="{'background':col}" (click)="selectedColor=col;color6=col;"></div>
+                                                        </ng-container>                                           
+                                                    </div>
+                                                    <div class="save-switch" (click)="applyColor('msgColor','save')">{{'searchexperience.save_&_apply' | translate}}</div>
+                                                    <button class="kr-sg-button-primary btn_apply_save" (click)="applyColor('msgColor')">{{'searchexperience.apply' | translate}}</button>
                                                 </div>
-                                                <div class="selected-previous-colors flex-wrap">
-                                                    <ng-container *ngFor="let col of searchObject.searchWidgetConfig.userSelectedColors">
-                                                        <div class="bg-color-selected" [ngStyle]="{'background':col}" (click)="selectedColor=col;color6=col;"></div>
-                                                    </ng-container>                                           
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="fill-colors-block">
+                                        <div class="fill-color">
+                                            <div class="label-color">Fill Colorr</div>
+                                            <div class="box-color" [ngClass]="{'color-pallet-container interaction-color': msgColor}" (mouseover)="toggle6=true;msgColor=true;">
+                                                <input
+                                                    [style.background]="color6"
+                                                    [(colorPicker)]="color6"
+                                                    [cpOutputFormat]="'hex'"
+                                                    [cpAlphaChannel]="'always'"
+                                                    (colorPickerChange)="selectedColor=$event" 
+                                                    [cpCloseClickOutside]="false"
+                                                    [(cpToggle)]='toggle6'
+                                                    readonly
+                                                />
+    
+                                                <div class="box-color-content" *ngIf="msgColor">
+                                                    <div class="header-title-close">
+                                                        <div class="title-name">{{'searchexperience.choose_color' | translate}}</div>
+                                                        <div class="close-color" (click)="closeColorPallete('msgColor')">
+                                                            <img src="assets/icons/close.svg">
+                                                        </div>
+                                                    </div>
+                                                    <div class="selected-previous-colors flex-wrap">
+                                                        <ng-container *ngFor="let col of searchObject.searchWidgetConfig.userSelectedColors">
+                                                            <div class="bg-color-selected" [ngStyle]="{'background':col}" (click)="selectedColor=col;color6=col;"></div>
+                                                        </ng-container>                                           
+                                                    </div>
+                                                    <div class="save-switch" (click)="applyColor('msgColor','save')">{{'searchexperience.save_&_apply' | translate}}</div>
+                                                    <button class="kr-sg-button-primary btn_apply_save" (click)="applyColor('msgColor')">{{'searchexperience.apply' | translate}}</button>
                                                 </div>
-                                                <div class="save-switch" (click)="applyColor('msgColor','save')">{{'searchexperience.save_&_apply' | translate}}</div>
-                                                <button class="kr-sg-button-primary btn_apply_save" (click)="applyColor('msgColor')">{{'searchexperience.apply' | translate}}</button>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="count-length">{{box.value.length}} / {{'searchexperience.60' | translate}}</div>
                             </div>
                         </div>
 
