FLY_2988 UAT_BotActions: Tooltip is displayed far away from the Chart in SDK issue fixed

--- a/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
@@ -11896,11 +11896,19 @@ padding-right: 0;
     font-size: 12px;
     line-height: 16px;
     cursor: default;
+    word-wrap: break-word;
 }
 .searchAssist-kore-chat-window .tile-with-text-parent .tile-with-text .tile-description img{
     width: 100%;
 }
-
+.searchAssist-kore-chat-window .tile-description img{
+    width: 100%;
+    display: block;
+    margin: auto;
+}
+.searchAssist-kore-chat-window #searchChatContainer .piechart .piechartDiv .lineChartChildDiv{
+    position: relative;
+}
 .searchAssist-kore-chat-window .tile-with-text-parent.slide-parent-tile-with-text .tile-with-text .tile-heading{
     max-height: 40px;
     overflow: hidden;
