FLY-3080 improvement done

--- a/findly-builder/src/app/components/search-experience/search-experience.component.scss
+++ b/findly-builder/src/app/components/search-experience/search-experience.component.scss
@@ -1560,6 +1560,9 @@
 ::ng-deep .joyride-step__close{
     display: none;
 }
+::ng-deep .emoji-mart-anchors{
+    display: none;
+}
 .kr-sg-input-text{
     input.input-text.err-block{
         background-color: rgb(255, 255, 255);
